--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Home Page</title>
-
+<title>Tom Counsell</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<style type="text/css" media="screen">
 		@import url( Static/style.css );
