Bunch of updates

--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,18 @@
 <figure>
 <img src="tomcounsell.jpg" />
 </figure>
-<p>Hello. I'm an engineer. At the moment I run the bit of <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">the Department of Energy and Climate Change</a>'s strategy team that worries about the long-term. Before that I was an assistant to <a href="http://www.inference.phy.cam.ac.uk/mackay/">David MacKay</a>, the department's Chief Scientific Advisor.</p>
-<p>For the first year of my time at DECC I was seconded from the <a href="http://www.carbontrust.co.uk">Carbon Trust</a>. I worked for them from October 2007 in the Insights team, which meant I worked on <a href="view/Publications.html">publications</a> that they produced on tricky climate change topics and helped them figure out how to improve what the Carbon Trust did.</p>
-<p>Before that I was studying for a <a href="view/Phd.html">PhD</a> at <a href="http://www.clare.cam.ac.uk">Clare College</a>, <a href="http://www.cam.ac.uk">Cambridge University</a>. My research was with the <a href="http://www.ifm.eng.cam.ac.uk/pp/">Production Processes Group</a> of the <a href="http://www.ifm.eng.cam.ac.uk">Manufacturing Division</a> of the <a href="http://www.eng.cam.ac.uk">Engineering Department</a>. My supervisor was <a href="http://www.ifm.eng.cam.ac.uk/people/jma42/">Julian Allwood</a>. I was also the teaching assistant on the <a href="http://www.ifm.eng.cam.ac.uk/met">Manufacturing Engineering Tripos</a> course.</p>
+<p>Hello. I'm an engineer. At the moment I run part of <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">the Department of Energy and Climate Change</a>'s strategy team. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
 <p>Perhaps you are looking for information about my:</p>
 <ol type="1">
 <li><a href="view/History.html">History</a></li>
 <li><a href="view/Phd.html">PhD</a></li>
-<li><a href="view/Publications.html">Publications</a></li>
-<li><a href="view/StuffIDoAroundTheDepartment.html">Department work</a></li>
-<li><a href="view/CollegeWork.html">College work</a></li>
 <li><a href="view/Programming.html">Programming</a></li>
 </ol>
-<p>If this list doesn’t cover what you want then feel free to <a href="view/HowToContactMe.html">contact me</a>.</p>
+<p>If this list doesn’t cover what you want then feel free to contact me at <script type="text/javascript">
+<!--
+h='&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#46;&#x6f;&#114;&#x67;';a='&#64;';n='&#116;&#x6f;&#x6d;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 </body>
 </html>
