--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,10 @@ h='&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#46;&#x6f;&#114;&#x67;';a='&
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 // -->
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
+<p>Recent changes:</p>
+<ol type="1">
+<li>Finished reading <a href="/books/thinking-in-time.html">Thinking in Time: The Uses of History for Decision-Makers by Richard E. Neustadt, Ernest R. May</a></li>
+<li>Working on a <a href="http://worrydream.com/Tangle/">tangle</a> for <a href="http://tamc.github.io/tamc-tangles/whenwillitbecheaperthangas.html">exploring when nuclear-powered-electricity might be cheaper than gas-powered-electricity</a></li>
+</ol>
 </body>
 </html>
