Added some news

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 <p>Recent changes:</p>
 <ol type="1">
+<li>Quite proud of the legends on the <a href="http://2050-calculator-tool.decc.gov.uk">new charts in the 2050 calculator</a>. Did them in <a href="http://d3js.org">D3</a> which was a pleasure. <a href="https://github.com/decc/twenty-fifty/blob/master/src/javascripts/stacked_area_chart.js.coffee">See the code</a>.</li>
 <li>Finished reading <a href="/books/thinking-in-time.html">Thinking in Time: The Uses of History for Decision-Makers by Richard E. Neustadt, Ernest R. May</a></li>
 <li>Working on a <a href="http://worrydream.com/Tangle/">tangle</a> for <a href="http://tamc.github.io/tamc-tangles/whenwillitbecheaperthangas.html">exploring when nuclear-powered-electricity might be cheaper than gas-powered-electricity</a></li>
 </ol>
