--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <ol type="1">
 <li><a href="view/History.html">History</a></li>
 <li><a href="view/Phd.html">PhD</a></li>
-<li><a href="/programming/">Programming</a></li>
+<li><a href="/programming/index.html">Programming</a></li>
 </ol>
 <p>If this list doesn’t cover what you want then feel free to contact me at <script type="text/javascript">
 <!--
