Updated list of programming projects

--- a/public/programming/index.html
+++ b/public/programming/index.html
@@ -21,6 +21,7 @@
 <li><a href="http://github.com/tamc/excel_to_code">excel_to_code</a> - compiles Excel spreadsheets into pure C or pure Ruby code, so that they can server as the backend to visualisations, or be driven programatically.</li>
 <li><a href="http://github.com/tamc/Sankey">Sankey</a> - A javascript library for drawing <a href="http://en.wikipedia.org/wiki/Sankey_diagram">Sankey</a> diagrams.</li>
 <li><a href="http://github.com/tamc/rubypeg">rubypeg</a> - A ruby library for constructing <a href="http://en.wikipedia.org/wiki/Parsing_expression_grammar">parsing expression grammars</a></li>
+<li><a href="http://tamc.github.io/how-much-is/">how-much-is</a> - A single page web application for doing unit conversions and simultaneously giving a sense of whether the number is big or not</li>
 </ul>
 <h2 id="dead-or-passed-on">Dead or passed on</h2>
 <ul>
