Added how loud does a dinosaur roar

--- a/public/programming/index.html
+++ b/public/programming/index.html
@@ -25,6 +25,7 @@
 </ul>
 <h2 id="dead-or-passed-on">Dead or passed on</h2>
 <ul>
+<il><a href="how-load-does-a-dinosaur-roar">How loud does a dinosaur roar?</a> - A bit of fun for my daughter's birthday party (Chrome only)</li>
 <li><a href="http://talks.cam.ac.uk">talks.cam</a> – A talk listing service for the University of Cambridge</li>
 <li><a href="http://www.nmk.co.uk">NMK</a> – Some of the back-end code behind this networking site</li>
 <li><a href="http://patchworks.counsell.org">Patchworks</a> – A cocoa interface to the <a href="http://www.darcs.net">darcs</a> version control system.</li>
