--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <img src="tomcounsell.jpg" />
 </figure>
 <p>Hello. I'm an engineer. At the moment I run part of <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">the Department of Energy and Climate Change</a>'s strategy team. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
+<p>Here are some <a href="/bio.html">words to describe me</a> for use in seminar programmes, posters about talks I am giving etc.</p>
 <p>Perhaps you are looking for information about my:</p>
 <ol type="1">
 <li><a href="view/History.html">History</a></li>
@@ -28,7 +29,7 @@
 <p>If this list doesn’t cover what you want then feel free to contact me at <script type="text/javascript">
 <!--
 h='&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#46;&#x6f;&#114;&#x67;';a='&#64;';n='&#116;&#x6f;&#x6d;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
 // -->
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 <h2 id="news">News</h2>
