Fixed typo in cv

--- a/public/cv.html
+++ b/public/cv.html
@@ -38,7 +38,7 @@
 
 <p>I formed and ran the Department of Energy & Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture & storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
 
-<h3>Grade 7, Assistant to Chief Scientific Advisor</h3>
+<h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
 <p>I was recruited into the UK Deparment of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
 
