Correction in cv

--- a/public/cv.html
+++ b/public/cv.html
@@ -25,7 +25,7 @@
 
 <h3>Deputy Director, International Climate Change</h3>
 
-<p>I ran a ten person team and £2&thinsp;million programme providing advice to other governments on how to think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign Office, for their approach.</p>
+<p>I ran a nine person team and £2&thinsp;million programme providing advice to other governments on how to think about the future of their energy systems. The team won a Civil Service Award, jointly with the Foreign Office, for their approach.</p>
 
 <p>Due to the departure of a colleague I also briefly & simultaneously managed another team during a challenging period. I was responsible for an additional thirty staff and £200&thinsp;million of overseas development aid.</p>
 
