--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <figure>
 <img src="tomcounsell.jpg" />
 </figure>
-<p>Hello. I'm an engineer. At the moment I run part of <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">the Department of Energy and Climate Change</a>'s strategy team. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
+<p>Hello. I'm an engineer. At the moment I am a Deputy Director at the UK <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">Department of Energy and Climate Change</a>. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
 <p>Here are some <a href="/bio.html">words to describe me</a> for use in seminar programmes, posters about talks I am giving etc.</p>
 <p>Perhaps you are looking for information about my:</p>
 <ol type="1">
