Tweaks to programming CV

--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -61,6 +61,21 @@
       color: #b00;
     }
 
+    .list {
+      position: relative;
+      margin-bottom: 0.5em;
+    }
+
+    .year {
+      position: absolute;
+      left: -15em;
+      width: 14em;
+      text-align: right;
+      top: 0.7em;
+      font-size: 0.5em;
+      color: #b00;
+    }
+
     a {
       text-decoration: none;
     }
@@ -69,11 +84,34 @@
       text-decoration: underline;
     }
 
+
+
+    /*
     a.image {
       display: block;
-      float: right;
+      right: -240px;
+      position: absolute;
       margin-left: 2em;
       border: solid 1px #b00;
+    }
+    */
+
+    figure {
+      margin: 0px;
+      padding: 0;
+      position: absolute;
+      right: -240px;
+      border: solid 1px #b00;
+      text-align: center;
+    }
+
+    figcaption {
+      font-size: 0.5em;
+    }
+
+
+    section {
+      position: relative;
     }
 
     section:after { 
@@ -92,20 +130,19 @@
 
   <h2>Education</h2>
 
-  <table>
-    <tr><td>2003&ndash;2007</td><td>University of Cambridge &mdash; PhD Engineering.</td></tr>
-    <tr><td>1996&ndash;2000</td><td>University of Cambridge &mdash; BA MEng Engineering, 1st class.</td></tr>
-    <tr><td>1990&ndash;1995</td><td>Millfield School, Somerset, UK &mdash; Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</td></tr>
-  </table>
+  <div class='list'><div class='year'>2003&ndash;2007</div>University of Cambridge &mdash; PhD Engineering.</div>
+  <div class='list'><div class='year'>1996&ndash;2000</div>University of Cambridge &mdash; BA MEng Engineering, 1st class.</div>
+  <div class='list'><div class='year'>1990&ndash;1995</div>Millfield School, Somerset, UK &mdash; Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</div>
 
   <h2>Experience with technologies</h2>
 
   <section>
     <h3>Languages</h3>
     <ul>
-      <li><a href='http://www.ruby-lang.org'>Ruby</a> &mdash; I've used this for substantial projects since 2003. I program in a test-driven style. </li>
-      <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; I've produced both single page and server backed web applications.</li>
-      <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a> &mdash; I've written small pieces of code that required high performance and interfaced them with Ruby.</li>
+      <li><a href='http://www.ruby-lang.org'>Ruby</a> &mdash; I've used this for substantial projects since 2003.</li>
+      <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; I've produced both single-page and client-server web applications.</li>
+      <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a> &mdash; I've written a few high performance routines and interfaced them with Ruby.</li>
+      <li><a href=''>Objective-C</a>, <a href=''>Java</a>, <a href=''>Haskell</a>, <a href=''>Julia</a> &mdash; I have more modest experience of these languages.</li>
     </ul>
   </section>
 
@@ -122,10 +159,12 @@
     <h3>Tools & Applications</h3>
 
     <ul>
-      <li><a href='http://git-scm.com'>git</a> &amp; <a href='http://github.com'>github</a> &mdash; I use them every day to manage the code I write.</li>
-      <li><a href='http://aws.amazon.com'>AWS</a> &mdash; I have set up and maintained Ubuntu servers and used images, auto-scaling, load balancers, S3, CloudFront and Route 53.</li>
-      <li><a href='http://www.postgresql.org'>postgres</a> &mdash; I have designed, set up and queryed simple databases and used them in low-volume production.</li>
-      <li><a href='http://www.ecma-international.org/publications/standards/Ecma-376.htm'>Excel</a> &mdash; not just how to use it effecively, but also how it file format works and how to interface it with other systems.</li>
+      <li><a href='http://git-scm.com'>Git</a> &amp; <a href='http://github.com'>GitHub</a> &mdash; I use them every day.</li>
+      <li><a href=''>Web servers</a> &mdash; I have set up and maintained Ubuntu servers.</li>
+      <li><a href='http://aws.amazon.com'>AWS</a> &mdash; I have used EC2, auto-scaling, load balancers, S3, CloudFront and Route 53.</li>
+      <li><a href='http://www.postgresql.org'>Postgres</a> &amp; <a href=''>MySQL</a> &mdash; I have used both in customer web applications.</li>
+      <li><a href='https://www.mongodb.org'>mongoDB</a> &amp; <a href='https://www.firebase.com'>Firebase</a> &mdash; I have used both for small applications.</li>
+      <li><a href='http://www.ecma-international.org/publications/standards/Ecma-376.htm'>Excel</a> &mdash; I know how its file format works and how to interface it with other systems.</li>
       <li><a href='http://www.vim.org'>VIM</a> &mdash; I use it every day.</li>
     </ul>
   </section>
@@ -133,61 +172,91 @@
   <h2>Projects delivered</h2>
 
   <section>
+    <div class='year'>2010&ndash;2015</div>
     <h3>The 2050 Calculator</h3>
-    <a class='image' href='http://2050-calculator-tool.decc.gov.uk'><img src='/static/2050.png' /></a>
 
-    <p>An <a href='http://2050-calculator-tool.decc.gov.uk'>online tool</a> that allows people to explore the future of the UK's energy system and has been in continuous operation since 2010. I wrote all the code, mostly in Ruby and Javascript with some C. Key features:</p>
+    <figure>
+      <a class='image' href='http://2050-calculator-tool.decc.gov.uk'><img src='/static/2050.png' /></a>
+      <figcaption>The 2050 Calculator</figcaption>
+    </figure>
+
+    <p>An <a href='http://2050-calculator-tool.decc.gov.uk'>interactive site</a> that allows people to explore the future of energy in the UK: what will we use it for? where will we get it from? Written in Javascript (using jQuery, Raphael &amp; D3js), Ruby (using Sinatra) and C.</p>
+
+    <p>Key features:</p>
+
     <ul>
       <li><a href='http://github.com/tamc/excel_to_code'>Code</a> that takes an Excel spreadsheet and translates it into an equivalent model written in C.</li>
-      <li><a href='http://github.com/decc/twenty-fifty'>Code</a> to interface between the C library and the javascript in the browser</li>
+      <li><a href='http://github.com/decc/twenty-fifty'>Code</a> to interface between the C library and the javascript in the browser.</li>
       <li>Bespoke javascript <a href='http://2050-calculator-tool.decc.gov.uk'>controls and charts</a>.</li>
     </ul>
   </section>
 
   <section>
+    <div class='year'>2007&ndash;2014</div>
     <h3>New Media Knowledge</h3>
-    <a class='image' href='/static/nmk.png'><img src='/static/nmk-small.png' /></a>
 
-    <p>A bespoke content management written for the New Media Knowledge organisation in operation 2007-2014. 90% of the code was written by me, using Ruby on Rails. The final styling was done by a design firm. It involved:</p>
+    <figure>
+      <a class='image' href='/static/nmk.png'><img src='/static/nmk-small.png' /></a>
+      <figcaption>New Media Knowledge</figcaption>
+    </figure>
+
+    <p>A bespoke content management written for the New Media Knowledge organisation. Written in Ruby on Rails, backed by MySQL.</p>
+    
+    <p>Key features:</p>
+
     <ul>
       <li>User management, blog posts and event listings.</li>
       <li>A mailing list system, including archives.</li>
       <li>A ticketing system, including payment system integration.</li>
-      <li>It was written in Ruby on Rails, backed by MySql.</li>
     </ul>
   </section>
 
   <section>
+    <div class='year'>2006&ndash;2007</div>
     <h3>Talks.cam</h3>
-    <a class='image' href='http://talks.cam.ac.uk'><img src='/static/talkscam.png' /></a>
 
-    <p>An <a href='http://talks.cam.ac.uk'>events listing</a> site written for the University of Cambridge. It has been in continuous use since 2006. I wrote the front and back-end code, using an early version of Ruby on Rails. It involved:</p>
+    <figure>
+      <a class='image' href='http://talks.cam.ac.uk'><img src='/static/talkscam.png' /></a>
+      <figcaption>talks.cam</figcaption>
+    </figure>
+
+    <p>An <a href='http://talks.cam.ac.uk'>events listing</a> site written for the University of Cambridge, and still in use. Written using an early version of Ruby on Rails, backed by MySQL.</p>
+
+    <p>Key features:</p>
+
     <ul>
-      <li>User management, including interfacing to the early University of Cambridge Single Sign On system.</li>
-      <li>A clever but complex alternative to tagging (talks could appear on any number of lists. Lists could contain other lists.)</li>
-      <li>Providing content that could be embedded on other people's websites</li>
+      <li>User management, including an interface to the University's single sign on system.</li>
+      <li>A clever alternative to tagging.</li>
+      <li>Served content that could be embedded in other static websites.</li>
     </ul>
   </section>
 
   <section>
     <h3>Ancient history</h3>
-    <a class='image' href='/static/soks.png'><img src='/static/soks-small.png' /></a>
 
-    <ul>
-      <li>In 2003 I developed one of the first wikis in the ruby langage (called SOKS) &mdash; written in pre-Rails ruby. Used for a while by (part of) NASA amongst others.</li>
-      <li>In 2000 I made an early attempt at Electronic Health Records for Cambridge Health Informatics (now defunct)  &mdash; Start-up. Developed system to query GP databases and summarise information for use in hosptials. Working in Java.</li>
-      <li>In 1998 I developed one of the early content management systems at Netcentric Solutions (now defunct) &mdash; Worked part-time for this Cambridge based start-up while completing my degree. Working in Java.</li>
-    </ul>
+    <figure>
+      <a class='image' href='/static/soks.png'><img src='/static/soks-small.png' /></a>
+      <figcaption>The SOKS Wiki</figcaption>
+    </figure>
+
+    <div class='list'><div class='year'>2003</div> I developed one of the first wikis in the ruby langage (called SOKS) &mdash; written in pre-Rails ruby. Used for a while by (part of) NASA amongst others.</div>
+    <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (now defunct)  &mdash; Start-up. Developed system to query GP databases and summarise information for use in hosptials. Working in Java.</div>
+    <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (now defunct) &mdash; Worked part-time for this Cambridge based start-up while completing my degree. Working in Java.</div>
   </section>
 
   <section>
     <h3>Little bits and pieces</h3>
-    <a class='image' href='http://tamc.github.io/flying-brick/'><img src='/static/flyingbrick.png' /></a>
+
+    <figure>
+      <a class='image' href='http://tamc.github.io/flying-brick/'><img src='/static/flyingbrick.png' /></a>
+      <figcaption>A flying brick chart</figcaption>
+    </figure>
 
     <ul>
-      <li>Novel data driven visuatlisations in d3: e.g.,: a <a href='http://bl.ocks.org/tamc/raw/024168df8660eeca26aa/'>CATES plot</a>, a <a href=''>Marginal Abatement Cost Curve</a>, a '<a href='http://tamc.github.io/flying-brick/'>flying brick</a>' chart.</li>
-      <li>Script that watches for changes on a github repository, combines the files and uses pandoc to spit out the result as Word, PDF and HTML.</li>
-      <li>Scripts to drive the UK TIMES energy model (written in GAMS) and visualise the results</li>
+      <li>I enjoy creating data driven visualisations: e.g.,: a <a href='http://bl.ocks.org/tamc/raw/024168df8660eeca26aa/'>CATES plot</a>, a <a href=''>Marginal Abatement Cost Curve</a>, a '<a href='http://tamc.github.io/flying-brick/'>flying brick</a>' chart, or a  <a href='http://tamc.github.io/Sankey/'>Sankey</a> diagram.</li>
+      <li>I like to automate: e.g., I have <a href='https://github.com/decc/calculator-book/tree/master/public'>a script</a> that watches for changes on <a href='https://github.com/decc/calculator-book'>a github repository</a>, combines the files and uses pandoc to spit out the result as <a href='http://book.2050.org.uk'>Word, PDF and HTML</a>.</li>
+      <li>I can solve optimization problems: e.g., <a href='https://github.com/decc/twenty-fifty/blob/master/model/optimiser/optimiser.c'>my genetic algorithm solver</a> in C.</li>
+      <li>I have had a go at programming applicaitons: e.g., an iPhone application to help breastfeeding mothers, that I sold on the iPhone app store for a while.</li>
     </ul>
   </section>
 
