--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -5,7 +5,8 @@
   <style>
     body {
       font-size: 1em;
-      font-family: "Franklin Gothic Book"
+      font-family: "Franklin Gothic Book";
+      line-height: 1.4em;
     }
 
     #content {
@@ -24,7 +25,12 @@
     }
 
     h1 {
-      margin-bottom: 0;
+      line-height: 3em;
+      margin-bottom: -1em;
+    }
+
+    h2 {
+      line-height: 2em;
     }
 
     h1, h2 {
@@ -56,14 +62,14 @@
       content: "★ ";
       position: absolute;
       left: -1.5em;
-      top: 0.5em;
+      top: 0.1em;
       font-size: 0.5em;
       color: #b00;
     }
 
     .list {
       position: relative;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.7em;
     }
 
     .year {
@@ -71,7 +77,7 @@
       left: -15em;
       width: 14em;
       text-align: right;
-      top: 0.7em;
+      top: 0.1em;
       font-size: 0.5em;
       color: #b00;
     }
@@ -239,9 +245,9 @@
       <figcaption>The SOKS Wiki</figcaption>
     </figure>
 
-    <div class='list'><div class='year'>2003</div> I developed one of the first wikis in the ruby langage (called SOKS) &mdash; written in pre-Rails ruby. Used for a while by (part of) NASA amongst others.</div>
-    <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (now defunct)  &mdash; Start-up. Developed system to query GP databases and summarise information for use in hosptials. Working in Java.</div>
-    <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (now defunct) &mdash; Worked part-time for this Cambridge based start-up while completing my degree. Working in Java.</div>
+    <div class='list'><div class='year'>2003</div> I developed one of the first wikis in the ruby langage (called SOKS). I wrote this in pre-Rails Ruby. It was used for a while by (part of) NASA.</div>
+    <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (a now defunct start-up). I developed their system to query GP databases and summarise the information for use in hosptials. I working in Java.</div>
+    <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (a now defunct start-up) I worked part-time for them while completing my degree. I worked in Java.</div>
   </section>
 
   <section>
@@ -272,11 +278,11 @@
 
   <h3>Project Management</h3>
 
-  <p>I know how to manage projects, from quick pieces of work with deadlines hours or days away to multi-year activities that involve many strands, many stakeholders, gantt charts, risk registers</p> 
+  <p>I have managed projects, from quick pieces of work with deadlines hours or days away to multi-year activities that involved many strands, many stakeholders, Gantt charts &amp; risk registers</p> 
 
   <h3>Communication</h3>
 
-  <p>I have presented to groups of up to 700 people, on technical and non-technical subjects, to benign and to hostile questioning. I have written academic papers, public blog posts and many reports.</p>
+  <p>I have presented to groups of up to 700 people, on technical and non-technical subjects, to benign and to hostile questioning. I have written academic papers, blog posts and reports.</p>
 
   <h3>Teams</h3>
 
