Fixed references to static directory to capitalize correctly

--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -216,7 +216,7 @@
     <h3>The 2050 Calculator</h3>
 
     <figure>
-      <a class='image' href='http://2050-calculator-tool.decc.gov.uk'><img src='/static/2050.png' /></a>
+      <a class='image' href='http://2050-calculator-tool.decc.gov.uk'><img src='/Static/2050.png' /></a>
       <figcaption>The 2050 Calculator</figcaption>
     </figure>
 
@@ -236,7 +236,7 @@
     <h3>New Media Knowledge</h3>
 
     <figure>
-      <a class='image' href='/static/nmk.png'><img src='/static/nmk-small.png' /></a>
+      <a class='image' href='/Static/nmk.png'><img src='/Static/nmk-small.png' /></a>
       <figcaption>New Media Knowledge</figcaption>
     </figure>
 
@@ -256,7 +256,7 @@
     <h3>Talks.cam</h3>
 
     <figure>
-      <a class='image' href='http://talks.cam.ac.uk'><img src='/static/talkscam.png' /></a>
+      <a class='image' href='http://talks.cam.ac.uk'><img src='/Static/talkscam.png' /></a>
       <figcaption>talks.cam</figcaption>
     </figure>
 
@@ -275,7 +275,7 @@
     <h3>Ancient history</h3>
 
     <figure>
-      <a class='image' href='/static/soks.png'><img src='/static/soks-small.png' /></a>
+      <a class='image' href='/Static/soks.png'><img src='/Static/soks-small.png' /></a>
       <figcaption>The SOKS Wiki</figcaption>
     </figure>
 
@@ -288,7 +288,7 @@
     <h3>Little bits and pieces</h3>
 
     <figure>
-      <a class='image' href='http://tamc.github.io/flying-brick/'><img src='/static/flyingbrick.png' /></a>
+      <a class='image' href='http://tamc.github.io/flying-brick/'><img src='/Static/flyingbrick.png' /></a>
       <figcaption>A flying brick chart</figcaption>
     </figure>
 
